# spyglass-solana

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  upload.sh
searchsite/: package.json  pnpm-lock.yaml
searchsite/src/app/: globals.css  layout.tsx  page.tsx
searchsite/src/components/: Hit.tsx  Panel.tsx
